@startuml class diagram
skinparam classAttributeIconSize 0

' classi
abstract class Scheduler {
    - taskSet: Taskset
    - readyTasks: TreeSet<Job>
    - activeJobs: Map<Task, Job>
    + schedule(): void
    + assignPriority(): void <<abstract>>
    # executeFor(): void
}

class MyClock <<final>> {
    - currentTime: Duration
    + getInstance(): MyClock
    + reset(): void
    + getCurrentTime(): Duration
    + advanceTo(): void
    + advanceBy(): void
}

class RMScheduler <<final>> {
}

class EDFScheduler <<final>> {
}

class Job <<final>> {
    - task: Task
    - releaseTime: Duration
    - absoluteDeadline: Duration
    - remainingExecutionTime: Duration
    - dynamicPriority: int
    - isCompleted: boolean
    + execute(): Duration
    + isDeadlineMissed(): boolean
}

class Taskset <<final>> {
    - tasks: Set<Task>
    + purelyPeriodicCheck(): void
}

class Task <<final>> {
    - id: int
    - period: Duration
    - deadline: Duration
    - executionTimeSampler: Sampler
    - nominalPriority: int
    + releaseJob(): Job
}

' relazioni
Scheduler <|-- RMScheduler
Scheduler <|-- EDFScheduler
Scheduler "1" --> "1" Taskset
Scheduler "1" o-- "*" Job
Taskset "1" *-- "1...*" Task
Task "1" -- "*" Job

@enduml
